kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: voyage-api
  namespace: voyage-analytics

spec:
  replicas: 1

  selector:
    matchLabels:
      app: voyage-api

  template:
    metadata:
      labels:
        app: voyage-api

    spec:
      containers:
      - name: voyage-api

        image: voyage_analytics-api:v1

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8000

        startupProbe:
          httpGet:
            path: /
            port: 8000
          failureThreshold: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
