kubernetes/app-deployment.yaml
# app-deployment.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: voyage-app
  namespace: voyage-analytics

spec:
  replicas: 1

  selector:
    matchLabels:
      app: voyage-app

  template:
    metadata:
      labels:
        app: voyage-app

    spec:
      containers:
      - name: voyage-app

        image: voyage_analytics-app:v2

        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"
