kubernetes/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: voyage-api-service
  namespace: voyage-analytics

spec:
  selector:
    app: voyage-api

  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30002

  type: NodePort
