kubernetes/app-service.yaml
# app-service.yaml

apiVersion: v1
kind: Service

metadata:
  name: voyage-app-service
  namespace: voyage-analytics

spec:
  selector:
    app: voyage-app

  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
    nodePort: 30001

  type: NodePort
